--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,5 +1,7 @@
 featured:
 - {name: 'Testing General Relativity with Present and Future Astrophysical Observations. Emanuele Berti (Mississippi U. and Lisbon, CENTRA), Enrico Barausse (Paris, Inst. Astrophys. and Paris U., VI-VII), Vitor Cardoso (Lisbon, IST and Perimeter Inst. Theor. Phys. and Lisbon, CENTRA), Leonardo Gualtieri (Rome U. and INFN, Rome), Paolo Pani (Rome U. and INFN, Rome and Lisbon, IST and Lisbon, CENTRA) et al.', url: '/publications/1501.07274.pdf'}
+- {name: 'Moosmann, M., Cuenca-Cambronero, M., Greenway, R., Hudson, H.C., Matthews, B. (2021) On the evolution of trophic position. Ecology letter. Doi: 10.111/ele.13888', url: 'https://onlinelibrary.wiley.com/doi/epdf/10.1111/ele.13888'}
+- {name: xx, url: '/publications/7. Cuenca-Cambronero_et_at-EvoApp.pdf'}
 - {name: 'Shock interactions, turbulence and the origin of the stellar mass spectrum. Ralph E. Pudritz and N. K.-R. Kevlahan', url: 'http://ms.mcmaster.ca/kevla/pdf/articles/PhilTransRSoc_2013.pdf'}
 - {name: 'Low shear diffusion central schemes for particle methods. Jonathan Panuelos, James Wadsley, Nicholas Kevlahan', url: 'http://ms.mcmaster.ca/kevla/pdf/articles/jcp_v414.pdf'}
 
